--- a/msm/Kbuild
+++ b/msm/Kbuild
@@ -56,6 +56,7 @@ LINUX_INC +=	-I$(DISPLAY_ROOT) \
 	-I$(DISPLAY_ROOT)/msm/dsi \
 	-I$(DISPLAY_ROOT)/msm/sde \
 	-I$(DISPLAY_ROOT)/include/uapi/display \
+	-I$(DISPLAY_ROOT)/msm/mi_disp \
 
 CDEFINES +=	-DANI_LITTLE_BYTE_ENDIAN \
 	-DANI_LITTLE_BIT_ENDIAN \
@@ -66,6 +67,10 @@ CDEFINES +=	-DANI_LITTLE_BYTE_ENDIAN \
 	-Wall\
 	-Werror\
 	-D__linux__
+
+ifeq (1, $(strip $(CONFIG_DISPLAY_FACTORY_BUILD)))
+CDEFINES +=	-DDISPLAY_FACTORY_BUILD
+endif
 
 KBUILD_CPPFLAGS += $(CDEFINES)
 
@@ -241,6 +246,26 @@ msm_drm-$(CONFIG_DRM_MSM) += msm_atomic.o \
 			     msm_gem_vma.o \
 			     msm_smmu.o \
 			     msm_prop.o
+
+msm_drm-$(CONFIG_DRM_MSM) += mi_disp/mi_disp_core.o \
+			     mi_disp/mi_disp_feature.o \
+			     mi_disp/mi_disp_sysfs.o \
+			     mi_disp/mi_disp_file.o \
+			     mi_disp/mi_disp_print.o \
+			     mi_disp/mi_disp_procfs.o \
+			     mi_disp/mi_disp_debugfs.o \
+			     mi_disp/mi_disp_print.o \
+			     mi_disp/mi_disp_log.o \
+			     mi_disp/mi_disp_lhbm.o \
+			     mi_disp/mi_disp_parser.o \
+			     mi_disp/mi_disp_flatmode.o\
+			     mi_disp/mi_dsi_display.o \
+			     mi_disp/mi_dsi_panel.o \
+			     mi_disp/mi_sde_crtc.o \
+			     mi_disp/mi_sde_encoder.o \
+			     mi_disp/mi_sde_connector.o \
+			     mi_disp/mi_cooling_device.o \
+			     mi_disp/mi_backlight_ktz8866.o
 
 CDEFINES += -DBUILD_TIMESTAMP=\"$(shell date -u +'%Y-%m-%dT%H:%M:%SZ')\"
 
