--- a/msm/Kbuild
+++ b/msm/Kbuild
@@ -264,12 +264,14 @@ msm_drm-$(CONFIG_DRM_MSM) += mi_disp/mi_disp_core.o \
 			     mi_disp/mi_disp_log.o \
 			     mi_disp/mi_disp_lhbm.o \
 			     mi_disp/mi_disp_parser.o \
+			     mi_disp/mi_disp_flatmode.o\
 			     mi_disp/mi_dsi_display.o \
 			     mi_disp/mi_dsi_panel.o \
 			     mi_disp/mi_sde_crtc.o \
 			     mi_disp/mi_sde_encoder.o \
 			     mi_disp/mi_sde_connector.o \
-			     mi_disp/mi_cooling_device.o
+			     mi_disp/mi_cooling_device.o \
+			     mi_disp/mi_backlight_ktz8866.o
 
 CDEFINES += -DBUILD_TIMESTAMP=\"$(shell date -u +'%Y-%m-%dT%H:%M:%SZ')\"
 
